--- a/client/post.jade
+++ b/client/post.jade
@@ -1,26 +1,97 @@
-template(name='reddit_page')
-    with current_doc
+template(name='post_view')
+    with doc_by_id
         .ui.stackable.grid
-            .twelve.wide.column
-                a.ui.basic.button.goto_sub(href="/#{data.subreddit}")
-                    i.chevron.left.icon
-                    |#{data.subreddit}
-                span.ui.pointer.text.f13.zoomer(class=post_header_class)
-                    .ui.label #{data.ups}
-                    |!{data.title} #{data.link_title}
-                | {{ufrom data.created}}
-                .ui.basic.button.get_post permalink #{permalink}
-                div
-                +skve k='view_section' v='main' l='main' i='content'
-                +skve k='view_section' v='comments' l='comments' i='comment'
-                +skve k='view_section' v='watson' l='emotion' i='dna'
-                if tone
-                    +skve k='view_section' v='tone' l='tone' i='smile grey'
-                // +skve k='view_section' v='tags' l='tags' i='tags'
-                +skve k='view_section' v='related' l='related' i='fork'
-                +skve k='view_section' v='preview' l='preview' i='content'
-                // if skv_is 'view_section' 'main'
-                .scrolling
+            .row 
+                .four.wide.column.scrolling
+                    .ui.segmen
+                        a.ui.large.circular.button(href="/#{group}")
+                            i.chevron.left.icon
+                            |#{group}
+                        .ui.inline.header #{title}
+                        // div
+                        // .ui.inline.grey.header {{from_now start_datetime}}
+                        
+                        if in_dev
+                            a.edit_post(href="/#{group}/p/#{_id}/edit" title='edit')
+                                i.large.link.pencil.circular.icon
+                        div
+                        span(title='views')
+                            | #{views}
+                            i.grey.eye.icon
+                        +array_edit key='tags' label='tags' direct=true
+                        // +voting_full
+                        +link_view key='link' label='link' direct=true
+    
+                        +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                        +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                        a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
+                            i.external.icon
+                            |url
+                        .ui.large.basic.label
+                            | #{data.domain}
+                        unless data.is_reddit_media_domain    
+                            if data.thumbnail
+                                img.ui.fluid.rounded.image.pointer.call_thumbnail.zoomer(src=data.thumbnail)
+                        // .ui.header #{data.domain}
+                        a.ui.basic.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
+                            i.external.grey.icon
+                            |r/#{data.subreddit}
+                        .spacer
+                        // a.ui.basic.button(href="https://www.reddit.com/user/#{author}" target='_window')
+                        a.ui.basic.button.goto_ruser(href="/user/#{data.author}")
+                            i.user.outline.icon
+                            |#{data.author}
+                        +call_watson id=_id key='data.url' durl=data.url mode='url'
+                        if in_dev
+                            +print_this
+                        if watson
+                            +doc_emotion
+                            // unless tone
+                            //     +call_tone    
+                        // a.ui.large.basic.label(href=data.url target='_window')
+                        //     | #{data.url}
+                        if in_dev
+                            .ui.small.header reddit_id #{data.reddit_id}
+                        .ui.basic.label
+                            i.comment.outline.icon
+                            |#{data.comment_count}
+                        .ui.basic.label
+                            i.thumbs.up.outline.icon
+                            |#{data.ups}
+                        |{{to_percent data.upvote_ratio}}%
+                        .ui.small.inline.header #{data.num_crossposts} crossposts
+                        |#{tags.length}
+                        each tags
+                            +flat_tag_picker
+                        
+                .twelve.wide.column.scrolling
+                    if image_link
+                        a(href="/#{group}")
+                            +image_link_view key='image_link' direct=true
+                    if image_id
+                        a(href="/#{group}")
+                            img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                    if youtube_id
+                        +youtube_view key='youtube_id' label='youtube id' direct=true
+                    if raw 
+                        |!{raw}
+                    .say_this.say_body
+                        |!{content}
+                    span.ui.pointer.text.f13.zoomer(class=post_header_class)
+                        .ui.label #{data.ups}
+                        |!{data.title} #{data.link_title}
+                    | {{ufrom data.created}}
+                    .ui.basic.button.get_post permalink #{permalink}
+                    div
+                    +skve k='view_section' v='main' l='main' i='content'
+                    +skve k='view_section' v='comments' l='comments' i='comment'
+                    +skve k='view_section' v='watson' l='emotion' i='dna'
+                    if tone
+                        +skve k='view_section' v='tone' l='tone' i='smile grey'
+                    // +skve k='view_section' v='tags' l='tags' i='tags'
+                    +skve k='view_section' v='related' l='related' i='fork'
+                    +skve k='view_section' v='preview' l='preview' i='content'
+                    // if skv_is 'view_section' 'main'
                     // if skv_is 'view_section' 'main'
                     if is_image
                         a.view_post(href="/#{subreddit}/post/#{_id}" class=post_header_class)
@@ -68,7 +139,6 @@ template(name='reddit_page')
                     //     |!{embed}
                     // if skv_is 'view_section' 'watson'
                     +rcomments_tab
-                    +watson_view
                     // +watson_full
                     // if skv_is 'view_section' 'related'
                     +post_related
@@ -83,48 +153,43 @@ template(name='reddit_page')
                     // .spacer
                     // if skv_is 'view_section' 'tags'
                     // if skv_is 'view_section' 'comments'
-            .four.wide.column
-                a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
-                    i.external.icon
-                    |url
-                .ui.large.basic.label
-                    | #{data.domain}
-                unless data.is_reddit_media_domain    
-                    if data.thumbnail
-                        img.ui.fluid.rounded.image.pointer.call_thumbnail.zoomer(src=data.thumbnail)
-                // .ui.header #{data.domain}
-                a.ui.basic.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
-                    i.external.grey.icon
-                    |r/#{data.subreddit}
-                .spacer
-                // a.ui.basic.button(href="https://www.reddit.com/user/#{author}" target='_window')
-                a.ui.basic.button.goto_ruser(href="/user/#{data.author}")
-                    i.user.outline.icon
-                    |#{data.author}
-                +call_watson id=_id key='data.url' durl=data.url mode='url'
-                if in_dev
-                    +print_this
-                if watson
-                    +doc_emotion
-                    // unless tone
-                    //     +call_tone    
-                // a.ui.large.basic.label(href=data.url target='_window')
-                //     | #{data.url}
-                if in_dev
-                    .ui.small.header reddit_id #{data.reddit_id}
-                .ui.basic.label
-                    i.comment.outline.icon
-                    |#{data.comment_count}
-                .ui.basic.label
-                    i.thumbs.up.outline.icon
-                    |#{data.ups}
-                |{{to_percent data.upvote_ratio}}%
-                .ui.small.inline.header #{data.num_crossposts} crossposts
-                |#{tags.length}
-                each tags
-                    +flat_tag_picker
-                
-                
+                        
+                    div 
+                    .spacer
+                    .spacer
+                    +comments
+                    if watson
+                        +watson_view
+                        +watson_full
+                // .twelve.wide.column.scrolling
+
+template(name='post_edit')
+    with doc_by_id
+        .ui.stackable.padded.grid
+            .row
+                .four.wide.column.scrolling
+                    a.ui.icon.red.circular.big.button(href="/#{group}/p/#{_id}" title='save')
+                        i.checkmark.big.icon
+                    .ui.inline.header 
+                        i.pencil.icon
+                        |edit group post
+                    i.large.link.red.remove.icon.delete_post
+                    +image_edit key='image_id' label='image' direct=true
+                    div 
+                    +array_edit key='tags' label='tags' direct=true
+                    +link_edit key='link' label='link' direct=true
+                    +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    +raw_edit key='raw' label='raw' direct=true
+                .twelve.wide.column.scrolling
+                    +text_edit key='title' label='title' direct=true
+                    +html_edit key='content' label='content' direct=true
+                    +image_link_edit key='image_link' direct=true
+                    +youtube_edit key='youtube_id' label='youtube id' direct=true
+        
+        
+
+
 template(name='rcomments_tab')                
     .ui.horizontal.divider.get_post_comments
         i.grey.comment.outline.icon
