--- a/client/watson.jade
+++ b/client/watson.jade
@@ -303,21 +303,21 @@ template(name='watson_full')
         i.grey.cubes.icon(title='categories')
         |categories
         each categories
-            // +tag_selector
+            // +tag_picker
             .ui.small.basic.pointer.add_stack_tag.tertiary.button #{this}    
     div 
     if Person 
         i.grey.users.icon
         .ui.inline.small.grey.header people
         each Person 
-            // +tag_selector
+            // +tag_picker
             .ui.small.basic.pointer.add_stack_tag.tertiary.button.pick_person #{this}
     div 
     if Company
         i.grey.briefcase.icon(title='company')
         .ui.inline.small.grey.header companies
         each Company 
-            // +tag_selector
+            // +tag_picker
             .ui.small.basic.pointer.add_stack_tag.tertiary.button.pick_company #{this}
     div 
     if TelevisionShow
@@ -359,7 +359,7 @@ template(name='watson_full')
         i.grey.marker.icon
         // .ui.inline.small.grey.header locations
         each Location 
-            +flat_tag_selector
+            +flat_tag_picker
             .ui.small.basic.pointer.add_stack_tag.tertiary.button.pick_location #{this}
     div 
     if PrintMedia
